--- a/composer.json
+++ b/composer.json
@@ -1,8 +1,8 @@
 {
     "name": "rainerzarth/tuersteher",
-    "description": "Craft Plugin for restricting Pageview only to the Registered Users",
+    "description": "prevent anonym user to view frontend content",
     "type": "craft-plugin",
-    "version": "1.0.8",
+    "version": "1.0.10",
     "keywords": [
         "craft",
         "cms",
@@ -11,14 +11,14 @@
         "tuersteher"
     ],
     "support": {
-        "docs": "http://github.com/RainerZarth/tuersteher",
-        "issues": "http://github.com/RainerZarth/tuersteher/issues"
+        "docs": "https://github.com/https://github.com/RainerZarth/tuersteher/tuersteher/blob/master/README.md",
+        "issues": "https://github.com/https://github.com/RainerZarth/tuersteher/tuersteher/issues"
     },
     "license": "MIT",
     "authors": [
         {
             "name": "Rainer Zarth",
-            "homepage": "raz.ddnss.de"
+            "homepage": "http://github.com/RainerZarth/tuersteher"
         }
     ],
     "require": {
@@ -32,9 +32,9 @@
     "extra": {
         "name": "tuersteher",
         "handle": "tuersteher",
-        "hasCpSettings": false,
+        "hasCpSettings": yes,
         "hasCpSection": false,
-        "changelogUrl": "http://github.com/RainerZarth/tuersteher/blob/master/CHANGELOG.md",
+        "changelogUrl": "https://raw.githubusercontent.com/https://github.com/RainerZarth/tuersteher/tuersteher/master/CHANGELOG.md",
         "class": "rainerzarth\\tuersteher\\Tuersteher"
     }
 }
