--- a/composer.json
+++ b/composer.json
@@ -2,7 +2,7 @@
     "name": "rainerzarth/tuersteher",
     "description": "prevent anonym user to view frontend content",
     "type": "craft-plugin",
-    "version": "1.1.0",
+    "version": "1.1.1",
     "keywords": [
         "craft",
         "cms",
@@ -32,7 +32,7 @@
     "extra": {
         "name": "tuersteher",
         "handle": "tuersteher",
-        "hasCpSettings": false,
+        "hasCpSettings": true,
         "hasCpSection": false,
         "changelogUrl": "https://github.com/RainerZarth/tuersteher/tuersteher/master/CHANGELOG.md",
         "class": "rainerzarth\\tuersteher\\Tuersteher"
